Esign: Fix non-wrapping email address in left menu

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -268,6 +268,10 @@ iframe {
     max-width: 100% !important;
 }
 
+.db-breakall {
+    word-break: break-all;
+}
+
 .db-center {
     display: flex;
     align-items: center;
